--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=
+DATABASE_URL="postgresql://yourusername:yourpassword@localhost:5432/yourdatabase?schema=public"
 JWT_SECRET=
