add additional environment variables for JWT and Midtrans configuration

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@
 
 DATABASE_URL="postgresql://yourusername:yourpassword@localhost:5432/yourdatabase?schema=public"
 JWT_SECRET=
+PORT=3002
+MIDTRANS_CLIENT_KEY=
+MIDTRANS_SERVER_KEY=
