add midtrans-client dependency to package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-sanitize-html": "^1.0.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.4.2",
     "prisma": "^6.3.1",
     "xss-clean": "^0.1.4",
     "zod": "^3.24.1"
