--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "midtrans-client": "^1.4.2",
     "prisma": "^6.3.1",
     "sanitize-html": "^2.14.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "xss-clean": "^0.1.4",
     "zod": "^3.24.1"
   },
@@ -36,6 +38,8 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.1",
     "@types/sanitize-html": "^2.13.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
